--- a/source/Python/爬虫/爬虫总结.md
+++ b/source/Python/爬虫/爬虫总结.md
@@ -66,15 +66,12 @@ print(r.text)
 
 ```
 
-- [request_基础](./example/request_基础.md)
-- [request_requests请求回应的网页乱码](./example/request_requests请求回应的网页乱码.md)
-- [request_session.headers.update(headers)无法对request.prepare()生效](./example/request_session.headers.update(headers)无法对request.prepare()生效.md)
+> [request_基础](https://my-skills-book.readthedocs.io/en/latest/Python/Python%E7%9F%A5%E8%AF%86%E7%82%B9/request_%E5%9F%BA%E7%A1%80.html)
 
 
 ### 2.3 正则表达式
 
-- [re_基础](../re/re_基础.md)
-- [re_实例](../re/re_实例.md)
+> [正则表达式实例](https://my-skills-book.readthedocs.io/en/latest/re/%E6%AD%A3%E5%88%99%E8%A1%A8%E8%BE%BE%E5%BC%8F%E5%AE%9E%E4%BE%8B.html)
 
 ## 三. 解析库的使用
 
@@ -90,10 +87,6 @@ result = html.xpath('//li[contains(@class, "li") and @name="item"]/a/text()')
 print(result)
 # ['first item']
 ```
-
-- [lxml_xpath获取标签内的包括所有下级标签的所有文字内容](./example/lxml_xpath获取标签内的包括所有下级标签的所有文字内容.md)
-- [lxml_使用lxml的etree.iterparse()解析大型XML](./example/lxml_使用lxml的etree.iterparse()解析大型XML.md)
-- [lxml_etree.iterparse解析大型XML遇到命名空间的问题](./example/lxml_etree.iterparse解析大型XML遇到命名空间的问题.md)
 
 ### 3.2 pyquery
 
@@ -111,26 +104,20 @@ for item in a.items():
 
 ### 4.2 json文件存储
 
-- [json_解析json文件](./example/json_解析json文件.md)
+- [json_解析json文件](https://my-skills-book.readthedocs.io/en/latest/Python/Python%E7%9F%A5%E8%AF%86%E7%82%B9/json_%E8%A7%A3%E6%9E%90json%E6%96%87%E4%BB%B6.html)
 
 ### 4.3 csv文件存储
 
-- [csv_解析csv、tsv文件](./example/csv_解析csv、tsv文件.md)
-- [csv_通过csv.writer写入数据每行都会增加一个空行](./example/csv_通过csv.writer写入数据每行都会增加一个空行.md)
-- [csv_以逗号分隔字符串,但忽略双引号内的逗号](./example/csv_以逗号分隔字符串,但忽略双引号内的逗号.md)
+- [csv_解析csv、tsv文件](https://my-skills-book.readthedocs.io/en/latest/Python/Python%E7%9F%A5%E8%AF%86%E7%82%B9/csv_%E8%A7%A3%E6%9E%90csv%E3%80%81tsv%E6%96%87%E4%BB%B6.html)
 
 ### 4.4 MySQL存储
 
-- [pymysql_example](./example/pymysql_example.md)
-- [mysql_实例](../sql/mysql/mysql_实例.md)
-- [mysql_安装及问题](../sql/mysql/mysql_安装及问题.md)
+- mysql
 
 ### 4.5 redis存储
 
-- [redis_实例](../sql/redis/redis_实例.md)
-- [redis_安装及问题](../sql/redis/redis_安装及问题.md)
+- [redis](https://my-skills-book.readthedocs.io/en/latest/databases/Redis/index.html)
 
 ### 4.6 mongodb存储
 
-- [mongodb_实例](../sql/mongodb/mongodb_实例.md)
-- [mongodb_安装及问题](../sql/mongodb/mongodb_安装及问题.md)
+- [mongodb](https://my-skills-book.readthedocs.io/en/latest/databases/Mongodb/index.html)
