--- a/source/Windows/装机指南.md
+++ b/source/Windows/装机指南.md
@@ -73,34 +73,29 @@
 [wegame](https://www.wegame.com.cn)
 
 ## `program/program_code`
+
 [Python 3.6.8](https://www.python.org/downloads/windows/)
 
 - 安装路径`D:\program\program_code\Python36`
 - 配置环境变量
-- [virtualenv](/python/example/virtualenv_基础和virtualenvwrapper.md)
-- [模块安装](/python/example/模块安装.md)
+- [virtualenv和virtualenvwrapper](https://my-skills-book.readthedocs.io/en/latest/Python/Python%E7%9F%A5%E8%AF%86%E7%82%B9/virtualenv%E5%92%8Cvirtualenvwrapper.html)
+
 
 [git](https://git-scm.com/downloads)
 
 - 安装路径`D:\program\program_code\Git`
-- [配置github](/git/github基础.md)
-
-    ```git
-    git config --global user.name   "oldestcrab"
-    git config --global user.email      "oldestcrab@gmail.com"
-    ssh-keygen -t rsa(id_rsa.pub黏贴到  github  上）
-    ```
+- [托管到github]([/git/github基础.md](https://my-skills-book.readthedocs.io/en/latest/Git/%E6%89%98%E7%AE%A1%E5%88%B0github.html))
 
 [VS code](https://code.visualstudio.com/)
 
 - 安装路径`D:\program\program_code\Microsoft VS Code`
-- [插件以及同步](/vscode/插件及其错误.md)
+- [VS code配置](https://my-skills-book.readthedocs.io/en/latest/VS%20code/VS%20code%E9%85%8D%E7%BD%AE.html)
 - 修改中文： ctrl + shift + p 输入：language 修改为："locale":"zh-CN" ,然后安装插件 Chinesev
-- [设置](/vscode/vscode_settings.json)
+- [配置]([/vscode/vscode_settings.json](https://github.com/CrabQ/my_skills_book/blob/master/source/VS%20code/vscode_settings.json))
 
 [PyCharm](http://www.jetbrains.com/pycharm/)
 
-- 设置 `/pycharm/settings.zip`
+- [配置](https://github.com/CrabQ/my_skills_book/tree/master/source/pycharm)
 
 ## `program/program_database`
 
@@ -112,9 +107,9 @@
 [mongodb](https://www.mongodb.com/download-center/community)
 
 - 安装路径`D:\program\program_database\MongoDB`
-- [配置](/sql/mongodb/mongodb_安装及问题.md)
+- [win 10安装Mongodb](https://my-skills-book.readthedocs.io/en/latest/databases/Mongodb/Mongodb%E5%AE%89%E8%A3%85.html)
 
 [redis](https://github.com/MicrosoftArchive/redis/releases)
 
 - 安装路径`D:\program\program_database\Redis`
-- [配置](/sql/redis/redis_安装及问题.md)
+- [win 10安装redis](https://my-skills-book.readthedocs.io/en/latest/databases/Redis/Redis%E5%AE%89%E8%A3%85.html)
