--- a/source/Python/爬虫/爬虫总结.md
+++ b/source/Python/爬虫/爬虫总结.md
@@ -112,7 +112,7 @@ for item in a.items():
 
 ### 4.4 MySQL存储
 
-- mysql
+- [MySql](https://my-skills-book.readthedocs.io/en/latest/databases/Mysql/index.html)
 
 ### 4.5 redis存储
 
