--- a/source/Windows/装机指南.md
+++ b/source/Windows/装机指南.md
@@ -102,7 +102,7 @@
 [mysql](https://dev.mysql.com/downloads/mysql/)
 
 - 安装路径`D:\program\program_database\mysql`
-- [配置](/sql/mysql/mysql_安装及问题.md)
+- [mysql安装及错误](https://my-skills-book.readthedocs.io/en/latest/databases/Mysql/mysql%E5%AE%89%E8%A3%85%E5%8F%8A%E9%94%99%E8%AF%AF.html)
 
 [mongodb](https://www.mongodb.com/download-center/community)
 
