修改格式错误

--- a/source/Windows/装机指南.md
+++ b/source/Windows/装机指南.md
@@ -80,18 +80,17 @@
 - 配置环境变量
 - [virtualenv和virtualenvwrapper](https://my-skills-book.readthedocs.io/en/latest/Python/Python%E7%9F%A5%E8%AF%86%E7%82%B9/virtualenv%E5%92%8Cvirtualenvwrapper.html)
 
-
 [git](https://git-scm.com/downloads)
 
 - 安装路径`D:\program\program_code\Git`
-- [托管到github]([/git/github基础.md](https://my-skills-book.readthedocs.io/en/latest/Git/%E6%89%98%E7%AE%A1%E5%88%B0github.html))
+- [托管到github(https://my-skills-book.readthedocs.io/en/latest/Git/%E6%89%98%E7%AE%A1%E5%88%B0github.html)
 
 [VS code](https://code.visualstudio.com/)
 
 - 安装路径`D:\program\program_code\Microsoft VS Code`
 - [VS code配置](https://my-skills-book.readthedocs.io/en/latest/VS%20code/VS%20code%E9%85%8D%E7%BD%AE.html)
 - 修改中文： ctrl + shift + p 输入：language 修改为："locale":"zh-CN" ,然后安装插件 Chinesev
-- [配置]([/vscode/vscode_settings.json](https://github.com/CrabQ/my_skills_book/blob/master/source/VS%20code/vscode_settings.json))
+- [配置](https://github.com/CrabQ/my_skills_book/blob/master/source/VS%20code/vscode_settings.json)
 
 [PyCharm](http://www.jetbrains.com/pycharm/)
 
