增加操作系统内存管理机制相关内容

--- a/source/Python服务端工程师技术栈/操作系统.md
+++ b/source/Python服务端工程师技术栈/操作系统.md
@@ -89,3 +89,51 @@ Python有GIL,可以用多进程实现cpu密集程序
     multiprocessing多进程模块
     Multiprocessing.Process类实现多进程
     一般用在cpu密集程序里,避免GIL的影响
+
+## 操作系统内存管理机制
+
+### 什么是分页机制
+
+逻辑地址和物理地址分离的内存分配管理方案
+
+    程序的逻辑地址划分为固定大小的页(Page)
+    物理地址划分为同样大小的帧(Frame)
+    通过页表对应逻辑地址和物理地址
+
+### 什么是分段机制
+
+分段是为了满足代码的一些逻辑需求
+
+    数据共享,数据保护,动态链接等
+    通过段实现逻辑地址和物理地址的映射关系
+    每个段内部是连续内存分配,段和段之间是离散分配的
+
+### 分页和分段的区别
+
+分页VS分段
+
+    页是出于内存利用率的角度提出的分散分配机制
+    段是出于用户角度,用于数据保护,数据隔离等用途的管理机制
+    页的大小是固定的,操作系统决定;段大小不确定,用户程序决定
+
+### 什么是虚拟内存
+
+通过把一部分暂时不用的内存信息放到硬盘上
+
+    局部性原理,程序运行的时候只有部分必要的信息装入内存
+    内存中暂时不需要的内容放到硬盘上上
+    系统似乎提供了比实际内存大得多的容量,称之为虚拟内存
+
+### 什么是内存抖动(颠簸)
+
+本质是频繁的页调度行为
+
+    频繁的页调度,进程不断产生缺页中断
+    置换一个页,又不断再次需要这个页
+    运行程序太多;页面替换策略不好.终止进程或者增加物理内存
+
+### Python的垃圾回收机制原理
+
+    引用计数为主(缺点:循环引用无法解决)
+    引入标记清除和分代回收解决引用计数的问题
+    引用计数为主+标记清除和分代回收为辅
