添加跳台阶问题

--- a/source/Python/经典算法题.md
+++ b/source/Python/经典算法题.md
@@ -189,7 +189,7 @@ def min_arrays(array):
 
 大家都知道斐波那契数列,现在要求输入一个整数n,请你输出斐波那契数列的第n项（从0开始,第0项为0）. n<=39
 
-```shell
+```python
 def Fibonacci(n):
     if n <= 1:
         return n
@@ -197,4 +197,46 @@ def Fibonacci(n):
     for i in range(n-1):
         a, b = b, a+b
     return b
+```
+
+### 008_跳台阶
+
+一只青蛙一次可以跳上1级台阶，也可以跳上2级。求该青蛙跳上一个n级的台阶总共有多少种跳法（先后次序不同算不同的结果）。
+
+```python
+# 假设对于第n级台阶，总共有f(n)种跳法.
+# 那么f(n) = f(n-1) + f(n-2)，其中f(1)=1,f(2)=2
+
+def num_ways(n):
+    if n <= 2:
+        return n
+    a , b = 1, 2
+    for i in range(n-2):
+        a, b = b, a+b
+    return b
+```
+
+### 009_变态跳台阶
+
+一只青蛙一次可以跳上1级台阶，也可以跳上2级……它也可以跳上n级。求该青蛙跳上一个n级的台阶总共有多少种跳法
+
+```python
+# f(1)=1, f(2)=2, f(3)=4, f(4)=8 设n+1级f(n+1),有
+# f(n+1) = f(1) + f(2) + ... + f(n)
+# f(n+2) = f(1) + f(2) + ... + f(n+1)
+# f(n+2)= 2f(1) + 2f(2) + ... + 2f(n)
+# 故得f(n+2) = 2f(n+1)
+
+def num_ways(n):
+    if n == 1:
+        return 1
+    return 2*num_ways(n-1)
+
+def num_ways_2(n):
+    if n == 1:
+        return 1
+    a = 1
+    for _ in range(n-1):
+        a = 2*a
+    return a
 ```
