--- a/source/Windows/装机指南.md
+++ b/source/Windows/装机指南.md
@@ -80,6 +80,16 @@
 - 配置环境变量
 - [virtualenv和virtualenvwrapper](https://my-skills-book.readthedocs.io/en/latest/Python/Python%E7%9F%A5%E8%AF%86%E7%82%B9/virtualenv%E5%92%8Cvirtualenvwrapper.html)
 
+更新pip源
+
+```shell
+# 用户目录下新建C:\Users\crab\pip\pip.ini
+[global]
+timeout = 6000
+index-url = https://pypi.tuna.tsinghua.edu.cn/simple
+trusted-host = pypi.tuna.tsinghua.edu.cn
+```
+
 [git](https://git-scm.com/downloads)
 
 - 安装路径`D:\program\program_code\Git`
