添加linux修改pip源

--- a/source/Windows/装机指南.md
+++ b/source/Windows/装机指南.md
@@ -88,6 +88,12 @@
 timeout = 6000
 index-url = https://pypi.tuna.tsinghua.edu.cn/simple
 trusted-host = pypi.tuna.tsinghua.edu.cn
+
+# linux
+vi  ~/.pip/pip.conf
+[global]
+
+index-url = https://mirrors.aliyun.com/pypi/simple/
 ```
 
 [git](https://git-scm.com/downloads)
