--- a/source/Python/经典算法题.md
+++ b/source/Python/经典算法题.md
@@ -240,3 +240,29 @@ def num_ways_2(n):
         a = 2*a
     return a
 ```
+
+### 010_矩形覆盖
+
+我们可以用 2 \* 1 的小矩形横着或者竖着去覆盖更大的矩形。请问用n个2 \* 1的小矩形无重叠地覆盖一个2\*n的大矩形，总共有多少种方法？
+
+```shell
+# f(1) = 1 f(2) = 2
+# f(n) = f(n-1) + f(n-2)
+
+def rectCover(n):
+    if n <=2 :
+        return n
+    return rectCover(n-1)+rectCover(n-2)
+
+def rectCover(n):
+    if n <=2 :
+        return n
+    a, b = 1, 2
+    for _ in range(n-2):
+        a, b = b, a+b
+    return b
+```
+
+### 011_二进制中1的个数
+
+输入一个整数，输出该数二进制表示中1的个数。其中负数用补码表示
