--- a/source/Python/经典算法题.md
+++ b/source/Python/经典算法题.md
@@ -266,3 +266,40 @@ def rectCover(n):
 ### 011_二进制中1的个数
 
 输入一个整数，输出该数二进制表示中1的个数。其中负数用补码表示
+
+### 012_数值的整数次方
+
+给定一个double类型的浮点数base和int类型的整数exponent。求base的exponent次方。
+
+指数幂的所有边界包括:
+
+- 指数为0的情况，不管底数是多少都应该是1
+- 指数为负数的情况，求出的应该是其倒数幂的倒数
+- 指数为负数的情况下，底数不能为0
+
+### 013_调整数组顺序使奇数位于偶数前面
+
+输入一个整数数组，实现一个函数来调整该数组中数字的顺序，使得所有的奇数位于数组的前半部分，所有的偶数位于数组的后半部分，并保证奇数和奇数，偶数和偶数之间的相对位置不变。
+
+```python
+# 遍历一次，统计奇数个数
+# 然后从前往后填坑
+
+def reOrderArray(array):
+    new_list = [0]*len(array)
+    # 计算奇数个数
+    odd_cnt = 0
+    for i in array:
+        if i%2==1:
+            odd_cnt += 1
+    # 填入新数组
+    odd_i = 0
+    for i in range(len(array)):
+        if array[i]%2==1:
+            new_list[odd_i]=array[i]
+            odd_i += 1
+        else:
+            new_list[odd_cnt] = array[i]
+            odd_cnt +=1
+    return new_list
+```
