--- a/source/Python/经典算法题.md
+++ b/source/Python/经典算法题.md
@@ -303,3 +303,60 @@ def reOrderArray(array):
             odd_cnt +=1
     return new_list
 ```
+
+### 014_链表中倒数第k个结点
+
+输入一个链表，输出该链表中倒数第k个结点。
+
+```python
+# 用快慢指针，快指针比慢指针快k步，到尾结点了慢指针就是倒数第k个结点
+
+class ListNode:
+    def __init__(self, x):
+        self.val = x
+        self.next = None
+
+def FindKthToTail(head, k):
+    if not head:
+        return None
+
+    p_fast = head
+    p_slow = head
+    for _ in range(k):
+        if p_fast:
+            p_fast = p_fast.next
+        else:
+            return None
+
+    while p_fast:
+        p_fast = p_fast.next
+        p_slow = p_slow.next
+
+    return p_slow
+```
+
+### 015_反转链表
+
+输入一个链表，反转链表后，输出新链表的表头
+
+```python
+# 链表第二位与第一位交换位置,然后第三位,直到末尾
+
+class ListNode:
+    def __init__(self, x):
+        self.val = x
+        self.next = None
+
+def ReverseList(pHead):
+    if not pHead:
+        return None
+    head = ListNode(0)
+    head.next = pHead
+    p = pHead
+    while(p.next):
+        tp = p.next
+        p.next = p.next.next
+        tp.next = head.next
+        head.next = tp
+    return head.next
+```
