--- a/source/Python/经典算法题.md
+++ b/source/Python/经典算法题.md
@@ -360,3 +360,158 @@ def ReverseList(pHead):
         head.next = tp
     return head.next
 ```
+
+### 016_合并有序链表
+
+输入两个单调递增的链表，输出两个链表合成后的链表，当然我们需要合成后的链表满足单调不减规则
+
+```python
+class ListNode:
+    def __init__(self, x):
+        self.val = x
+        self.next = None
+
+def Merge(pHead1, pHead2):
+    res = ListNoed(0)
+    head = res
+    while pHead1, pHead2:
+        if pHead1.val <= pHead2.val:
+            head.next = pHead1
+            head = head.next
+            pHead1 = pHead1.next
+        else:
+            head.next = pHead2
+            head = head.next
+            pHead2 = pHead2.next
+    if pHead1:
+        head.next = pHead1
+    if phead2:
+        head.next = pHead1
+    return res.next
+
+```
+
+### 017_树的子结构
+
+输入两棵二叉树A，B，判断B是不是A的子结构。（ps：我们约定空树不是任意一个树的子结构）
+
+```python
+# 遍历父结构,判断子结构是否相同
+
+class TreeNode:
+    def __init__(self, x):
+        self.val = x
+        self.left = None
+        self.right = None
+
+def helper(treeA, treeB):
+    if not treeB:
+        return True
+    elif not treeA:
+        return False
+    elif treeA.val != treeB.val:
+        return False
+    else:
+        return helper(treeA.left, treeB.left) and helper(treeA.right, treeB.right)
+
+def HasSubtree(pRoot1, pRoot2):
+    if not pRoot1 or not pRoot2:
+        return False
+    res = False
+    if pRoot1.val == pRoot2.val:
+        res = helper(pRoot1, pRoot2)
+        return res
+    if res:
+        return True
+    else:
+        return HasSubtree(pRoot1.left, pRoot2) or HasSubtree(pRoot1.right, pRoot2)
+```
+
+### 018_二叉树的镜像
+
+操作给定的二叉树，将其变换为源二叉树的镜像。 输入描述:
+
+```python
+二叉树的镜像定义：源二叉树
+            8
+           /  \
+          6   10
+         / \  / \
+        5  7 9 11
+        镜像二叉树
+            8
+           /  \
+          10   6
+         / \  / \
+        11 9 7  5
+```
+
+```python
+# 左右交换
+
+class TreeNode:
+    def __init__(self, x):
+        self.val = x
+        self.left = None
+        self.right = None
+
+def Mirror(root):
+    if not root:
+        return None
+
+    tmp = Mirror(root.right)
+    root.right = Mirror(root.left)
+    root.left = tmp
+    return root
+```
+
+### 019_顺时针打印矩阵
+
+输入一个矩阵，按照从外向里以顺时针的顺序依次打印出每一个数字，例如，如果输入如下4 X 4矩阵： 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 则依次打印出数字1,2,3,4,8,12,16,15,14,13,9,5,6,7,11,10.
+
+```python
+# 用一个bool数组标记走过的路，到底了就按照 右→下→左→上→右 的方式修改运动方向
+def printMatrix(matrix):
+    walked = [[False]*(len(matrix[0])+1) for _ in range(len(matrix)+1)]
+    for j in range(len(walked[-1])):
+        walked[-1][j] = True
+    for j in range(len(walked)):
+        walked[j][-1] = True
+
+    len_row = len(matrix) - 1
+    len_col = len(matrix[0]) - 1
+    res = []
+    i = 0
+    j = 0
+    # 0向右, 1向下, 2向左, 3向上
+    direction = 0
+
+    while not walked[i][j]:
+        res.append(matrix[i][j])
+        walked[i][j] = True
+        if direction == 0:
+            if j < len_col and not walked[i][j+1]:
+                j += 1
+            else:
+                direction = 1
+                i += 1
+        elif direction == 1:
+            if i<len_row and not walked[i+1][j]:
+                i += 1
+            else:
+                direction = 2
+                j -= 1
+        elif direction == 2:
+            if j>0 and not walked[i][j-1]:
+                j -= 1
+            else:
+                direction = 3
+                i -= 1
+        elif direction == 3:
+            if i>0 and not walked[i-1][j]:
+                i -= 1
+            else:
+                direction = 0
+                j += 1
+    return res
+```
