--- a/source/Python/经典算法题.md
+++ b/source/Python/经典算法题.md
@@ -515,3 +515,62 @@ def printMatrix(matrix):
                 j += 1
     return res
 ```
+
+### 020_包含min函数的栈
+
+定义栈的数据结构，请在该类型中实现一个能够得到栈中所含最小元素的min函数（时间复杂度应为O（1））
+
+```python
+# 用辅助栈存储当前data的最小值，辅助栈头即为min值
+
+class MinStack(object):
+    def __init__(self):
+        self.stack = []
+        self.min_stack = []
+
+    def push(self, node):
+        self.stack.append(node)
+        if not self.min_stack:
+            self.min_stack.append(node)
+        else:
+            if self.min_stack[-1] < node:
+                self.min_stack.append(self.min_stack[-1])
+            else:
+                self.min_stack.append((node))
+
+    def pop(self):
+        self.stack.pop(-1)
+        self.min_stack.pop(-1)
+
+    def top(self):
+        if self.stack:
+            return self.stack[-1]
+        else:
+            return []
+
+    def min(self):
+        return self.min_stack[-1]
+```
+
+### 021_栈的压入、弹出序列
+
+输入两个整数序列，第一个序列表示栈的压入顺序，请判断第二个序列是否可能为该栈的弹出顺序。假设压入栈的所有数字均不相等。例如序列1,2,3,4,5是某栈的压入顺序，序列4,5,3,2,1是该压栈序列对应的一个弹出序列，但4,3,5,1,2就不可能是该压栈序列的弹出序列。（注意：这两个序列的长度是相等的）
+
+```python
+# 遍历压入栈，存储于栈中，遍历过程中，如果栈顶是出栈结点，推出值。
+# 最终栈空则弹出序列有效
+# 栈不空则弹出序列无效
+
+def IsPopOrder(pushV, popV):
+    stact = []
+    i = 0
+    for v in pushV:
+        stack.append(v)
+        while stack and stack[-1] == popV[i]:
+            i += 1
+            stack.pop(-1)
+    if not stack:
+        return True
+    else:
+        return False
+```
