--- a/source/Python/经典算法题.md
+++ b/source/Python/经典算法题.md
@@ -639,3 +639,35 @@ def VerifySquenceOfBST(sequence):
         return False
     return helper(sequence)
 ```
+
+### 024_二叉树中和为某一值的路径
+
+输入一颗二叉树的根节点和一个整数，打印出二叉树中结点值的和为输入整数的所有路径。路径定义为从树的根结点开始往下一直到叶结点所经过的结点形成一条路径。(注意: 在返回值的list中，数组长度大的靠前)
+
+```python
+# 先序遍历：
+
+# 每次访问一个节点，那么就将当前权值求和
+# 如果当前权值和与期待的和一致，那么说明我们找到了一个路径，保存或者输出
+# 每次深度遍历到底部，回退一个点
+
+class Solution(object):
+    def __init__(self):
+        self.result_all = []
+        self.array = []
+
+    def pathSum(self, root, expectNumber):
+        if not root:
+            return []
+        self.array.append(root.val)
+        expectNumber -= root.val
+        if expectNumber == 0 and not root.left and not root.right:
+            self.result_all.append(self.array[:])
+        self.pathSum(root.left, expectNumber)
+        self.pathSum(root.right, expectNumber)
+        self.array.pop()
+
+        return self.result_all
+```
+
+### 025_复杂链表的复制
