--- a/source/Python/经典算法题.md
+++ b/source/Python/经典算法题.md
@@ -671,3 +671,66 @@ class Solution(object):
 ```
 
 ### 025_复杂链表的复制
+
+### 026_二叉搜索树与双向链表
+
+输入一棵二叉搜索树，将该二叉搜索树转换成一个排序的双向链表。要求不能创建任何新的结点，只能调整树中结点指针的指向
+
+```python
+# 二叉搜索树性质有：
+# 没有相同结点
+# 值：左<根<右
+
+# 因此我们需要，中序遍历中
+# pre.right = curr
+# curr.left = pre
+
+class Solution():
+    def __init__(self):
+        self.pre = None
+
+    def Convert(self, root):
+        if not root:
+            return None
+        self.helper(root)
+        while root.left:
+            root = root.left
+        return root
+
+    def helper(self, cur):
+        if not cur:
+            return None
+        self.helper(cur.left)
+        cur.left = self.pre
+        if self.pre:
+            self.pre.right = cur
+        self.pre = cur
+        self.helper(cur.right)
+```
+
+### 027_字符串的排列
+
+输入一个字符串,按字典序打印出该字符串中字符的所有排列。例如输入字符串abc,则打印出由字符a,b,c所能排列出来的所有字符串abc,acb,bac,bca,cab和cba
+
+输入描述
+输入一个字符串,长度不超过9(可能有字符重复),字符只包括大小写字母。
+
+```python
+# 取出第i个数，全排列其他非i位置的数拼在后面
+
+def helper(s):
+    if len(s) == 1:
+        return s[0]
+    res = []
+    for i in range(len(s)):
+        l = helper(s[:i] + s[i+1:])
+        for j in l:
+            res.append(s[i] + j)
+
+    return res
+
+def Permutation(ss):
+    if not ss: return []
+    words = list(ss)
+    return list(sorted(set(helper(words))))
+```
