更新装机指南

--- a/source/Windows/装机指南.md
+++ b/source/Windows/装机指南.md
@@ -2,87 +2,50 @@
 
 ## 备份
 
-- [ ] 微信记录
-- [ ] 邮件
-- [ ] 数据库
+- [x] 微信记录
+- [x] 邮件
+- [x] 数据库
 
 ## `program/program_software`
 
 [360驱动大师](http://www.360.cn/qudongdashi/)
-
-[百度输入法](https://shurufa.baidu.com)
-
-- 登陆
-
-[360极速浏览器](https://browser.360.cn/ee/)
-
-- 登陆
-
-
-[chrome](https://www.google.cn/intl/zh-CN/chrome/)
-
-- 登陆
-
-[everything](http://www.voidtools.com/downloads/)
-
-- 修改为开机运行
-- 新建窗口快捷键： `alt+d`
-
-[Snipaste](https://zh.snipaste.com/index.html)
-
-- 修改为开机运行
-
-[wox](https://github.com/Wox-launcher/Wox/releases)
-
-- 修改为开机运行
-- 替换皮肤`./wox/WoxTheme.xaml`
-- 打开快捷键：`alt + space`
-
-[notepad++](https://notepad-plus-plus.org)
-
-- 关联txt
-
+[百度输入法,登陆](https://shurufa.baidu.com)
+[360极速浏览器,登陆](https://browser.360.cn/ee/)
+[chrome,登陆](https://www.google.cn/intl/zh-CN/chrome/)
+[everything,开机运行,新建窗口快捷键alt+d](http://www.voidtools.com/downloads/)
+[Snipaste,开机运行](https://zh.snipaste.com/index.html)
 [bandizip](https://www.bandisoft.com/bandizip/)
-
 [foxmail](https://www.foxmail.com)
-
 [微信](https://pc.weixin.qq.com)
-
 [QQ](https://office.qq.com)
-
 [网易云音乐](https://music.163.com)
-
 [有道词典](http://cidian.youdao.com)
-
 [有道云笔记](http://note.youdao.com)
-
 [PotPlayer](https://daumpotplayer.com/download/)
-
 [baacloud](https://www.baacloud37.com/shiyong.php)
-
 [百度网盘](http://pan.baidu.com/download)
-
 [迅雷](https://www.xunlei.com)
-
 [wps](https://www.wps.cn)
 
 ## `program/program_game`
 
 [steam](https://store.steampowered.com)
-
 [wegame](https://www.wegame.com.cn)
 
 ## `program/program_code`
 
+### Python 3.6.8
+
+[改用为miniconda](https://docs.conda.io/en/latest/miniconda.html)
+
 [Python 3.6.8](https://www.python.org/downloads/windows/)
-
-- 安装路径`D:\program\program_code\Python36`
-- 配置环境变量
-- [virtualenv和virtualenvwrapper](https://my-skills-book.readthedocs.io/en/latest/Python/Python%E7%9F%A5%E8%AF%86%E7%82%B9/virtualenv%E5%92%8Cvirtualenvwrapper.html)
-
-更新pip源
+[virtualenv和virtualenvwrapper](https://my-skills-book.readthedocs.io/en/latest/Python/Python%E7%9F%A5%E8%AF%86%E7%82%B9/virtualenv%E5%92%8Cvirtualenvwrapper.html)
 
 ```shell
+# 安装路径 D:\program\program_code\Python36
+# 配置环境变量
+
+# 更新pip源
 # 用户目录下新建C:\Users\crab\pip\pip.ini
 [global]
 timeout = 6000
@@ -96,23 +59,29 @@ vi  ~/.pip/pip.conf
 index-url = https://mirrors.aliyun.com/pypi/simple/
 ```
 
+###　git
+
 [git](https://git-scm.com/downloads)
+[托管到github](https://my-skills-book.readthedocs.io/en/latest/Git/%E6%89%98%E7%AE%A1%E5%88%B0github.html)
 
-- 安装路径`D:\program\program_code\Git`
-- [托管到github(https://my-skills-book.readthedocs.io/en/latest/Git/%E6%89%98%E7%AE%A1%E5%88%B0github.html)
+```shell
+# 安装路径 D:\program\program_code\Git
+```
 
+### VS code
+
+改为使用便携版
 [VS code](https://code.visualstudio.com/)
 
-- 安装路径`D:\program\program_code\Microsoft VS Code`
-- [VS code配置](https://my-skills-book.readthedocs.io/en/latest/VS%20code/VS%20code%E9%85%8D%E7%BD%AE.html)
-- 修改中文： ctrl + shift + p 输入：language 修改为："locale":"zh-CN" ,然后安装插件 Chinesev
-- [配置](https://github.com/CrabQ/my_skills_book/blob/master/source/VS%20code/vscode_settings.json)
+### PyCharm
 
 [PyCharm](http://www.jetbrains.com/pycharm/)
-
-- [配置](https://github.com/CrabQ/my_skills_book/tree/master/source/pycharm)
+[配置](https://github.com/CrabQ/my_skills_book/tree/master/source/pycharm)
 
 ## `program/program_database`
+
+[改用为dokcer](https://www.docker.com/products/docker-desktop)
+[win 10安装docker](https://my-skills-book.readthedocs.io/en/latest/Docker/Docker%E5%AE%89%E8%A3%85.html#windows-10docker)
 
 [mysql](https://dev.mysql.com/downloads/mysql/)
 
