添加程序启动进度窗口提示脚本

--- a/source/Windows/批处理实列.md
+++ b/source/Windows/批处理实列.md
@@ -1,12 +1,33 @@
 # 批处理实列
 
-1. 创建一个cmd窗口，进入python虚拟环境
+程序启动进度窗口提示
 
-   ```bat
-   @echo off
-   rem 设置当前窗口标题为spider_env
-   title spider_env
-   rem cmd /k : 执行 String 指定的命令并继续，运行完会保持当前运行窗口及环境变量
-   cmd /k "D:\program\program_essential\Python36\virtualenv\spider_env\Scripts\activate"
+```bat
+@echo off
+REM 不换行
+set /p ="程序正在启动中,请稍后. . . " <nul
 
-   ```
+cd ./img_overlap
+start img_overlap.exe
+
+REM 标签行
+:loop
+    REM 延时2秒
+    ping /n 2 127.0.0.1 >nul
+    REM 不换行加点
+    set /p =" . " <nul
+    REM 查询当前是否有标题为图片合成工具的窗口
+    tasklist /fi "windowtitle eq 图片合成工具" | findstr -i "img_overlap.exe" > nul
+    REM 上条指令执行结果代码,1表示错误.即窗口已存在的话退出cmd
+    if not ERRORLEVEL 1 (
+        REM echo.
+        REM echo 程序已成功启动!
+        REM ping /n 2 127.0.0.1 >nul
+        exit
+    )
+
+REM 跳转到标签行
+goto loop
+
+pause
+```
