不以某些字符开头或不以某些字符结尾

--- a/source/re/正则表达式实例.md
+++ b/source/re/正则表达式实例.md
@@ -62,3 +62,27 @@ print(real_url)
 
 https://www.genecopoeia.com/order
 ```
+
+不以某些字符开头或不以某些字符结尾
+
+```python
+# ?! 否定式向前查询
+# ?<! 否定式向后查询
+
+# python正则中，字符串不以 -GS 或 -CF 结尾
+import re
+
+pattern = re.compile('(?<!-GS|-CF)$')
+print(pattern.search('sldg-GS'))
+print(pattern.search('sldg-CF'))
+print(pattern.search('sldg-cf'))
+print(pattern.search('sldg-gs-GS-SDG'))
+print('===========')
+
+# python正则中，字符串不以 -GS 或 -CF 开头
+pattern = re.compile('^(?!-GS|-CF)')
+print(pattern.search('-GSsldg'))
+print(pattern.search('-CFsldg'))
+print(pattern.search('-cfs-GSldg'))
+print(pattern.search('-gs-GS-SDGsldg-'))
+```
